# lesion-retrieval

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/evaluation/: default.yaml
configs/logging/: default.yaml
configs/loss/: contrastive.yaml  infonce.yaml  none.yaml  triplet.yaml
configs/model/: dinov2.yaml  resnet.yaml  vit.yaml
configs/training/: default.yaml
scripts/: __init__.py  cluster_images.py  run_all_experiments.py  run_experiment.py  visualize_misclassifications.py
src/: __init__.py
src/datasets/: __init__.py  dermoscopic_dataset.py  folds.py
src/evaluation/: __init__.py  misclassifications.py  pairwise_metrics.py  results.py
src/losses/: __init__.py  contrastive_loss.py  infonce_loss.py  triplet_loss.py
src/models/: __init__.py  embedding_model.py
src/training/: __init__.py  phase_runners.py  trainer.py
src/utils/: __init__.py  device.py  model_factory.py  paths.py  seed.py
