[project]
name = "skinbit"
version = "0.1.0"
description = "Instance-level image matching for dermoscopic images"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "omegaconf>=2.3.0",
    "urllib3<2.0",  # Pin to <2.0 for LibreSSL compatibility on macOS
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasets", "src/models", "src/losses", "src/training", "src/evaluation", "src/utils"]

# Dev dependencies (tool.uv.dev-dependencies is deprecated but still works)
# The new dependency-groups syntax may vary by uv version
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
